# pharmacophore2mol

./: .gitignore  README.md  dataset.py  pyproject.toml  requirements.txt  setup.py
comparisons/voxmol/: dataset.py
data/: .gitignore
data/downloaders/: README.md  ZINC_shards.uri  zinc3d.py
docs/: .gitignore
docs/figures/: .gitignore
docs/images/: main.py
local-diffusers/: setup.py
pharmacophore2mol/: .gitignore  __init__.py  __main__.py  cli.py  configs.py  logging_config.py
pharmacophore2mol/data/: Grapher.py  Pharmacophore.py  Voxelizer.py  chemistry.py  dag_dataset.py  dataset.py  dataset_old.py  grapher.py  pharmacophore.py  preprocessing.py  utils.py  voxelizer.py
pharmacophore2mol/metrics/: evaluator.py  utils.py
pharmacophore2mol/models/: .gitignore
pharmacophore2mol/random/: benchmark_cache.py  bonds_rdkit_vs_ob.py  butterflies_hf_uncond_diffuser.py  coordinate_gnn_denoiser.py  example_delinker_input.json  feature_defs.txt  fragment.py  fragmenting_comparison.py  get_symbols.py  gif_tensorboard.py  load_model.py  loss_vs_step.py  mayavi_test.py  mol_to_graph.py  molgrid_test.py  multiprocesses_viztracer.py  noise_tests.py  pgmg_pharm_test.py  pharmacophore.py  phenol_hf_uncond_diffuser.py  pickle_timings.py  planar_3d_hf_uncond_diffuser.py  planar_hf_uncond_diffuser.py  predict_rot_mnist.py  rotate_pharm.py  test_frag_count.py  test_mol_caching.py  test_rotations.py  trace_rdkit_sdmolsupplier_len.py  unconditional_phenol_diffuser.py  unet3d_impl_from_diffusers.py  (+3 more)
random/: get_symbols.py  numba_benchmark.py  subunit_voxels.py  voxelize.py
(+61 files in other folders)
